--- a/RPS.html
+++ b/RPS.html
@@ -6,6 +6,6 @@
    <body>
       <p>The music is running in the background.</p>
       <p>(Song: Kalimba which is provided as a Sample Music in Windows)</p>
-      <embed src="https://www.youtube.com/watch?v=QwdbFNGCkLw" loop="true" autostart="true" width="2" height="0">
+      <src="https://www.youtube.com/watch?v=QwdbFNGCkLw" loop="true" autostart="true" width="2" height="0">
    </body>
 </html>
