changes embed info

--- a/RPS.html
+++ b/RPS.html
@@ -6,6 +6,10 @@
    <body>
       <p>The music is running in the background.</p>
       <p>(Song: Kalimba which is provided as a Sample Music in Windows)</p>
-      <embed src="<iframe width="727" height="409" src="https://www.youtube.com/embed/QwdbFNGCkLw" title="Nightcore - Ievan Polkka (VSNS Remix)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>" loop="true" autostart="true" width="2" height="0">
+      <embed src="/html/Kalimba.mp3" loop="true" autostart="true" width="2" height="0">
+
+
+
+        <embed <iframe width="2" height="0" src="https://www.youtube.com/embed/QwdbFNGCkLw" title="Nightcore - Ievan Polkka (VSNS Remix)" frameborder="0" allow="autoplay;" ></iframe>
    </body>
 </html>
