deleated and edited music info

--- a/RPS.html
+++ b/RPS.html
@@ -5,6 +5,12 @@
    </head>
    <body>
 
-        <embed <iframe width="2" height="0" src="https://www.youtube.com/embed/QwdbFNGCkLw" title="Nightcore - Ievan Polkka (VSNS Remix)" frameborder="0" autoplay="true" loop="true"></iframe>
+        <iframe width="727" height="409" src="https://www.youtube.com/embed/QwdbFNGCkLw" title="Nightcore - Ievan Polkka (VSNS Remix)" frameborder="0" autoplay="true" loop="true"></iframe>
    </body>
+
+
+
+
+
+  
 </html>
