--- a/rps-6.html
+++ b/rps-6.html
@@ -108,7 +108,7 @@
       }
     };
   </script>
-<iframe width="1500" height="600" src="https://www.youtube.com/embed/3VTkBuxU4yk" title="K/DA - MORE ft. Madison Beer, (G)I-DLE, Lexie Liu, Jaira Burns, Seraphine (Official Music Video)" frameborder="0" allow="autoplay; loop" autostart="true"></iframe>
+<iframe width="1500" height="600" src="https://www.youtube.com/embed/HaocSevtBSQ" title="Extra (Like O.M.G.) Official Animated Music Video | L.O.L. Surprise! O.M.G." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <img src="https://c.tenor.com/FB2JXCbmAVIAAAAC/wear-helmet-akali.gif" alt="wear-helmet-akali"></img>
 <p> <bold> <marquee direction="left">............................... Eye of the Tiger......... You Got This! ............. Akali Go "GRRRRR!" .......... Don't Stop........... You Know We Got it Like, Boom! Boom! Blow Your Mind! ......................</marquee> </bold> </p>
 </html>
