--- a/rps-6.html
+++ b/rps-6.html
@@ -23,7 +23,7 @@
   alert("The game is simple: Rock paper scissors.")
   alert("In this game, you are going to play against ME: your beloved computer, as CPU.")
   alert("Pick 'r' for rock, 'p' for paper and 's' for scissors.")
-  alert("Click on the video to listen to some music as you play.")
+  alert("Click on the videos to listen to some music as you play. right click on the video of choice and click 'loop' to loop the song.")
   alert("If you want to restart the round,refresh the page.")
   alert("Ready?")
   alert("Rock...")
@@ -109,6 +109,8 @@
     };
   </script>
 <iframe width="399" height="300" src="https://www.youtube.com/embed/HaocSevtBSQ" title="Extra (Like O.M.G.) Official Animated Music Video | L.O.L. Surprise! O.M.G." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="399" height="300" src="https://www.youtube.com/embed/UOxkGD8qRB4" title="K/DA - POP/STARS (ft. Madison Beer, (G)I-DLE, Jaira Burns) | Music Video - League of Legends" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="399" height="300" src="https://www.youtube.com/embed/QwdbFNGCkLw" title="Nightcore - Ievan Polkka (VSNS Remix)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <img src="https://c.tenor.com/FB2JXCbmAVIAAAAC/wear-helmet-akali.gif" alt="wear-helmet-akali"></img>
 <p> <bold> <marquee direction="left">............................... Eye of the Tiger......... You Got This! ............. Akali Go "GRRRRR!" .......... Don't Stop........... You Know We Got it Like, Boom! Boom! Blow Your Mind! ......................</marquee> </bold> </p>
 </html>
