added tree of life song

--- a/rps-6.html
+++ b/rps-6.html
@@ -113,4 +113,5 @@
 <p> <bold> <marquee direction="left">............................... Eye of the Tiger......... You Got This! ............. Akali Go "GRRRRR!" .......... Don't Stop........... You Know We Got it Like, Boom! Boom! Blow Your Mind! ......................</marquee> </bold> </p>
 <iframe width="399" height="300" src="https://www.youtube.com/embed/UOxkGD8qRB4" title="K/DA - POP/STARS (ft. Madison Beer, (G)I-DLE, Jaira Burns) | Music Video - League of Legends" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <iframe width="399" height="300" src="https://www.youtube.com/embed/QwdbFNGCkLw" title="Nightcore - Ievan Polkka (VSNS Remix)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="399" height="300" src="https://www.youtube.com/embed/tBm73YjJB0o" title="Animal Kingdom | Tree of Life | BGM Loop" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </html>
